--- a/online indoor plant/online indoor plant/Views/Shared/_Layout.cshtml
+++ b/online indoor plant/online indoor plant/Views/Shared/_Layout.cshtml
@@ -48,7 +48,7 @@
         <nav class="navbar">
 
             <a asp-area="" asp-controller="Home" asp-action="">ONLINE_INDOOR_PLANTS</a>
-            <a asp-area="" asp-controller="Home" asp-action="Home">Home</a>
+            <a asp-area="" asp-controller="Home" asp-action="Index">Home</a>
 
             <div class="dropdown">
                 <div class="dropdown-content">
